<resources>
    <string name="app_name">Malaria Prevention</string>
    <string name="app_homescreen_name">PC Malaria Home</string>
    <string name="user_medicine_settings_activity_pc_logo">Peace Corps Logo</string>
    <string name="user_medicine_settings_activity_setup_label">Set Up</string>
    <string name="user_medicine_settings_activity_drug_take_label">I Take</string>
    <string name="user_medicine_settings_activity_time_pick_label">Remind me at:</string>
    <string name="user_medicine_settings_activity_time_pick_button">Pick Time</string>
    <string name="user_medicine_settings_activity_if_forget_label">If I forget</string>
    <string name="age_limit_exceeded">Age limit exceeded.</string>
    <string name="value_lessthan_366">Enter a value less than 366</string>
    <string name="quantity_required">Quantity Required</string>
    <string name="user_medicine_settings_activity_done_button">DONE</string>
    <string name="second_analytic_screen_title">SECOND ANALYTIC SCREEN</string>
    <string name="first_analytic_screen_doses_missing_text">Doses in a Row</string>
    <string name="first_analytic_screen_medicine_last_taken_text">Medicine Last Taken</string>
    <string name="first_analytic_screen_medicine_adherence_to_medicine_text">Adherence to Medicine</string>
    <string name="alarm_auto_start_boot_completed_intent_check">android.intent.action.BOOT_COMPLETED</string>
    <string name="alert_dialog_title">Malaria Medication Reminder</string>
    <string name="alert_dialog_message">Have you taken your drug today ?</string>
    <string name="user_medicine_settings_fragment_activity_title">PC Malaria Prevention</string>
    <string name="info_hub_title_label">Info Hub</string>
    <string name="plan_my_trip_label">Plan My Trip</string>
    <string name="peace_corps_policy">Peace Corps Policy</string>
    <string name="percentage_of_side_effects">Percentage of Side Effects</string>
    <string name="side_effects_reported_by_PCVs">Side Effects Reported by PCVs</string>
    <string name="effectiveness_against_malaria">Effectiveness Against Malaria</string>
    <string name="volunteer_adherence_rates">Volunteer Adherence Rates</string>
    <string name="non_PCV_reported_side_effects">Non-PCV Reported Side Effects</string>
    <string name="label_location">Location:</string>
    <string name="cash_label">Cash to Bring:</string>
    <string name="label_pack">Packing List:</string>
    <string name="medication_label">Medication:</string>
    <string name="remind_label">Remind Me On:</string>
    <string name="trip_button_label">Generate</string>
    <string name="location_spinner_label">Choose Location</string>
    <string name="medication_spinner_label">Choose Drug</string>
    <string name="items_spinner_label">Pick Items</string>
    <string name="trip_select_string">Add Packing Items</string>
    <string name="dump_test">Fetching...</string>
    <string name="help_game_dialog_title">Game Info</string>
    <string name="help_game_dialog_buttonStart">Start the Game</string>
    <string name="help_game_dialog_heading">How to Play -</string>
    <string name="help_game_dialog_showNextTime">Show this help next time</string>
    <string name="user_profile">User Profile</string>
    <string name="save">SAVE</string>
    <string name="badge_room">Badge Room</string>
    <string name="rapid_fire">Rapid Fire</string>
    <string name="myth_vs_fact">Myth Vs Fact</string>
    <string name="medicine_store">Medicine Store</string>
    <string name="add_medicine_to_store">Add Medicine to Store</string>
    <string name="backslash">/</string>
    <string name="previous_locations">Previous Locations</string>
    <string name="select_drugs">Select Drugs</string>
    <string name="reset_statement">Do you want to reset app settings? It will delete all data.</string>
    <string name="random_multiply">15*2*1-1</string>
    <string name="sample_text">This is sample text. This is sample text</string>
    <string name="achievement_room">Achievement Room</string>
    <string name="achievement_1">Rookie  Taken your first medicine</string>
    <string name="achievement_2">Mr Know-It-All  Answered first question correctly</string>
    <string name="achievement_3">Explorer  Planned your first trip</string>
    <string name="sure_exit_game">Are you sure you want to exit the Game? Your current game points will be converted and added to your main score.</string>
    <string name="med_stock_empty_msg">You may be running out of medicines soon!</string>
    <string name="game_over">Game Over</string>
    <string name="wait_for_new_game">Wait until new questions are added to the game.</string>
    <string name="no_of_days">7 Days</string>
    <string name="label_name">  Name</string>
    <string name="label_email">  Email</string>
    <string name="label_age">  Age</string>
    <string name="label_medication_type">Medication Type</string>
    <string name="label_departure_date">Departure Date:</string>
    <string name="label_remind_me">Remind me at:</string>
    <string name="label_arrival_date">Arrival Date:</string>
    <string name="label_packing_items">Packing Items</string>
    <string name="label_select_pill">Select Pill</string>
    <string name="label_cash">Cash</string>
    <string name="label_trip_checklist_reminder">Trip Checklist Reminder</string>
    <string name="label_button_clear">Clear</string>
    <string name="label_button_snooze">Snooze</string>
    <string name="label_percentage_side_effects">Percentage Side Effects</string>
    <string name="label_side_effects">Side Effects Reported by PCVs</string>
    <string name="label_non_pcvs_effects">Non PCVs Reported Side Effects</string>
    <string name="label_reset">Reset Data</string>
    <string name="label_yes">YES</string>
    <string name="label_no">NO</string>
    <string name="label_score">Score :</string>
    <string name="label_exist_name">Exit Game</string>
    <string name="label_set_reminder_tone">SET REMINDER TONE</string>
    <string name="label_browse_button">...</string>
    <string name="label_settings">Settings</string>
    <string name="label_set">Set</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_order_med">Order Medicines</string>
    <string name="label_next">Next</string>
    <string name="label_question_place">Question Here</string>
    <string name="label_place_order">Place Order</string>
    <string name="label_med_quantity">Enter the number of medicines you want to order.</string>
    <string name="label_message">Message</string>
    <string name="label_feb">February</string>
    <string name="label_jan">January</string>
    <string name="label_mar">March</string>
    <string name="label_apr">April</string>
    <string name="label_add">Add</string>
    <string name="label_category">Category</string>
    <string name="label_achievement_text">Achievement Text</string>
    <string name="label_med_consum">Medicine Consumption</string>
    <string name="label_change_entry">Change Entry!</string>
    <string name="label_ok">OK</string>
    <string name="label_exit_game">Exit Game</string>
    <string name="label_drug">Drug:</string>
    <string name="label_taken">Taken:</string>
    <string name="hint_name">Enter Your Name</string>
    <string name="hint_email_address">Enter Your Email Address</string>
    <string name="hint_age">Age in years</string>
    <string name="hint_medicine">Enter the medicine you take</string>
    <string name="hint_location">Enter Location</string>
    <string name="hint_dd">DD</string>
    <string name="hint_mm">MM</string>
    <string name="hint_add_items">Add Items</string>
    <string name="hint_yy">YY</string>
    <string name="hint_trip_time">Trip Time</string>
    <string name="hint_dollar">$</string>
    <string name="hint_ex">Eg 7</string>
    <string name="hint_specify_path">Specify file path</string>
    <string name="departuredate_currentdate">"Departure date cannot be less than current date"</string>
    <string name="arrivaldate_departuredate">"Arrival date cannot be before the Departure date"</string>
    <string name="limit_exceeded">Limit Exceeded</string>
    <string name="mal_description">
        -Interferes with growth of parasites in red blood cells\n
        -Take the medicine everyday at the same time with food\n
        -Start using 1-2 days before entering the area\n
        -Continue using through out the stay,and at least 7 days after leave\n
        -Take missed doses as soon as possible, but skip them if it is almost time for next dose\n
        -Consult your doctor if you have liver or kidney disease, or malaria complications\n
        -Some side effects of drug: stomach pain, headache, diarrhea, fever, weakness\n
        -Visit <a href="http://www.drugs.com/malarone.html">http://www.drugs.com/malarone.html</a> for more information
    </string>
    <string name="doxy_description">
        -Tetracycline antibiotic that helps to fight bacteria in the body\n
        -Take the medicine everyday at the same time with food\n
        -Start using 1-2 days before entering the area\n
        -Continue using through out the stay,and at least 28 days after leave\n
        -Take missed doses as soon as possible, but skip them if it is almost time for next dose\n
        -Consult your doctor if you have liver or kidney disease, or are taking supplements and other medicines\n
        -Some side effects of drug: stomach pain, headache, diarrhea, fever, weakness\n
        -Visit <a href="http://www.drugs.com/doxycycline.html">http://www.drugs.com/doxycycline.html</a> for more information
    </string>
    <string name="mef_description">
        -Antimalarial agent that kills sensitive malaria parasites\n
        -Take the medicine once a week after your main meal (NOT ON AN EMPTY STOMACH)\n
        -Start using 1 week before entering the area\n
        -Continue using through out the stay,and at least 4 weeks after leave\n
        -Take missed doses as soon as possible, but skip them if it is almost time for next dose\n
        -Consult your doctor if you have allergies, mental illnesses, seizures, or are taking similar medicines\n
        -Some side effects of drug: stomach pain, headache, muscle ache, tiredness, vomiting\n
        -Visit <a href="http://www.drugs.com/cdi/mefloquine.html">http://www.drugs.com/cdi/mefloquine.html</a> for more information
    </string>
    <string name="trip_pref_destination">destination</string>
    <string name="trip_pref_dep_month">departure_month</string>
    <string name="trip_pref_dep_date">departure_date</string>
    <string name="trip_pref_dep_year">departure_year</string>
    <string name="trip_pref_arr_month">arrival_month</string>
    <string name="trip_pref_arr_date">arrival_date</string>
    <string name="trip_pref_arr_year">arrival_year</string>
    <string name="trip_pref_packed_items">packed_items</string>
    <string name="trip_pref_reminder_time">reminderTime</string>
    <string name="trip_pref">trip-details</string>
    <string name="drug_reminder_notification_title">Malaria Prevention</string>
    <string name="drug_reminder_notification_message">Take your Medicine!</string>
    <string name="drug_reminder_notification_action_snooze">Snooze</string>
    <string name="drug_reminder_notification_action_taken">Taken</string>
    <string name="description_drug_name">Drug name</string>
    <string name="description_drug_taken">Was drug taken today?</string>
    <string name="description_accept">Accept</string>
    <string name="description_change_data">Change data</string>
    <string name="description_badge_awarded">Your badges</string>
    <string name="description_badge_b1">Badge 1</string>
    <string name="description_badge_b3">Badge 2</string>
    <string name="description_badge_b5">Badge 3</string>
    <string name="description_badge_newbie">Newbie badge</string>
    <string name="description_badge_hat">Hat badge</string>
</resources>