<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dialog_background"
    android:id="@+id/dialogReset">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/lightest_brown">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/achievement_category"
                android:gravity="center"
                android:textColor="@color/golden_brown"
                android:text="Category"
                android:textSize="@dimen/textSize"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginLeft="@dimen/layout_margin"
                android:layout_marginRight="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                >
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/layout_margin"
            android:layout_weight="0.96">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/badge_text"
                        android:textColor="@color/golden_brown"
                        android:text="Achievement Text"
                        android:gravity="center"
                        android:layout_toRightOf="@+id/image"
                        android:layout_margin="@dimen/badge_text_margin" />
                    <ImageView
                        android:layout_width="@dimen/badge_layout"
                        android:layout_height="@dimen/badge_layout"
                        android:id="@+id/userBadge"
                        android:contentDescription="@string/description_badge_awarded"/>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/badge_layout_height"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/layout_margin_small"
            android:layout_marginTop="@dimen/badge_margin"
            android:layout_marginLeft="@dimen/badge_margin"
            android:layout_marginRight="@dimen/badge_margin"
            android:weightSum="5">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/description_badge_b1"
                android:background="@drawable/y_b1" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/description_badge_b3"
                android:background="@drawable/y_b3"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/description_badge_b5"
                android:background="@drawable/y_b5"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/description_badge_newbie"
                android:background="@drawable/y_newbie"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/description_badge_hat"
                android:background="@drawable/y_hat"/>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>