<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:background="@color/back_ground"
              android:orientation="vertical"
              android:paddingTop="@dimen/user_medicine_padding_top"
              tools:context=".activities.UserMedicineSettingsFragmentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/user_medicine_settings_activity_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/user_medicine_settings_activity_setup_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin"
                android:text="@string/user_medicine_settings_activity_setup_label"
                android:textSize="@dimen/user_medicine_textSize"
                android:textStyle="bold"
                android:textColor="@color/user_medicine_first_text_color"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/user_medicine_layout_margin"
                android:layout_marginRight="@dimen/user_medicine_layout_margin"
                android:background="@drawable/custom_line_border"
                android:orientation="vertical"
                android:paddingLeft="@dimen/user_medicine_padding_top_left" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/user_medicine_settings_activity_drug_take_label"
                        style="@style/UserMedicineSettingsCommonTextAppearance"
                        android:text="@string/user_medicine_settings_activity_drug_take_label"
                        android:paddingTop="@dimen/user_medicine_padding_top_left"
                        android:textColor="@color/golden_brown"
                        />

                </LinearLayout>

                <Spinner
                    android:id="@+id/user_medicine_settings_activity_drug_select_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/user_medicine_settings_activity_time_pick_label"
                    style="@style/UserMedicineSettingsCommonTextAppearance"
                    android:layout_marginRight="@dimen/user_medicine_layout_padding_right"
                    android:layout_marginTop="@dimen/user_medicine_layout_padding_top"
                    android:text="@string/user_medicine_settings_activity_time_pick_label"
                    android:textColor="@color/golden_brown"
                    />

                <TextView
                    android:id="@+id/user_medicine_settings_activity_time_pick_button"
                    style="@style/UserMedicineSettingsCommonTextAppearance"
                    android:layout_gravity="center"
                    android:paddingBottom="@dimen/user_medicine_layout_padding_bottom"
                    android:paddingTop="@dimen/user_medicine_layout_padding_top"
                    android:text="@string/user_medicine_settings_activity_time_pick_button"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/user_medicine_settings_activity_if_forget_label"
                        style="@style/UserMedicineSettingsCommonTextAppearance"
                        android:text="@string/user_medicine_settings_activity_if_forget_label"
                        android:paddingBottom="@dimen/user_medicine_layout_padding_bottom"
                        android:textColor="@color/golden_brown"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/user_medicine_layout_padding_left" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/user_medicine_settings_activity_done_button"
                style="@style/UserMedicineSettingsCommonTextAppearance"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/user_medicine_button_margin_top"
                android:textColor="@color/white"
                android:paddingLeft="@dimen/user_medicine_button_padding"
                android:paddingRight="@dimen/user_medicine_button_padding"
                android:background="@color/golden_brown"
                android:hint="@string/user_medicine_settings_activity_done_button"
                android:textColorHint="@color/white"
                android:layout_marginBottom="@dimen/user_medicine_settings_marginBottom"
                />
        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:gravity="bottom">
        <ImageView
        android:id="@+id/user_medicine_settings_activity_pc_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/user_medicine_settings_activity_pc_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/pc_logo"
        />
    </LinearLayout>

</LinearLayout>