<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground"
    android:id="@+id/layout_day">



    <LinearLayout
        android:id="@+id/heading_day"
        android:layout_width="fill_parent"
        android:layout_height="60sp"
        android:gravity="left|top"
        android:height="60sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dayDB"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/fragment_layout_height"
            android:layout_weight="0.6"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/golden_brown"
            android:textStyle="bold"
            android:textSize="@dimen/textSize">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/first_analytic_row_imageview_width"
            android:layout_height="@dimen/first_analytic_row_imageview_height"
            android:adjustViewBounds="true"
            android:background="@drawable/drug_normal"
            android:scaleType="fitCenter"
            android:padding="@dimen/layout_margin_small"
            android:layout_margin="@dimen/layout_margin"
            android:contentDescription="@string/description_drug_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"

            android:text="Drug:"
            android:layout_margin="@dimen/layout_margin"
            android:padding="@dimen/layout_margin_small"
            android:textSize="@dimen/textSize_small"
            android:textStyle="bold"
            android:textColor="@color/golden_brown"/>

        <TextView
            android:id="@+id/drugID"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/layout_margin"
            android:paddingRight="@dimen/layout_margin"
            android:paddingTop="@dimen/layout_margin_small"
            android:layout_margin="@dimen/layout_margin_right_left"
            android:text="..."
            android:textSize="@dimen/textSize_small"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/info_hub_button"

            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/first_analytic_row_imageview_width"
            android:layout_height="@dimen/first_analytic_row_imageview_height"
            android:adjustViewBounds="true"
            android:background="@drawable/doses_missing_image_normal"
            android:scaleType="fitCenter"
            android:padding="@dimen/layout_margin_small"
            android:layout_margin="@dimen/layout_margin"
            android:contentDescription="@string/description_drug_taken"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/badge_margin"
            android:paddingRight="@dimen/layout_margin"
            android:text="Taken:"
            android:textSize="@dimen/textSize_small"
            android:textColor="@color/golden_brown"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="@dimen/image_layout"
            android:layout_height="@dimen/image_layout"
            android:background="@drawable/accept_medi_grayscale"
            android:layout_marginTop="@dimen/badge_margin"
            android:id="@+id/medi_indicator"
            android:contentDescription="@string/description_accept"/>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.29"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="@dimen/image_layout"
            android:layout_height="@dimen/image_layout"
            android:src="@drawable/edit_pure_white"
            android:background="@drawable/roundedbutton"
            android:layout_gravity="right"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:id="@+id/btnChangeData"
            android:contentDescription="@string/description_change_data"/>

    </LinearLayout>


</LinearLayout>